app/styles/calendar-event.css
.event__title {
  line-height: 1.35;
}

.event__day {
  color: var(--text-lighter);
}

.event__times {
  display: grid;
  column-gap: var(--s-1-5);
  font-weight: var(--semi-bold);
  grid-template-columns: max-content 1fr;
}

.event__author-badges-container {
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
}

.event__badges__container {
  font-size: var(--fonts-xs);
  font-weight: var(--semi-bold);
  text-align: center;
}

.event__badges__gifs {
  display: flex;
  flex-wrap: wrap;
  padding: var(--s-2);
  background-color: var(--bg-badge);
  border-radius: var(--rounded);
}

.event__author {
  display: flex;
  align-items: center;
  color: var(--text-lighter);
  font-weight: var(--semi-bold);
  gap: var(--s-1);
}

